display issues on narrow mobile devices
added @media screen to html

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,12 @@ html {
   background-color: #ffffff;
 }
 
+@media screen and (max-width: 450px) {
+  html {
+    font-size: 70%;
+  }
+}
+
 body {
   font-family: 'Shippori Antique B1', sans-serif;
 }
